--- a/cards.html
+++ b/cards.html
@@ -22,17 +22,17 @@
             <form class="form-inline mr-auto float-left">
               <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
             </form>
-            <ul class="nav float-right">
-              <li class="nav-item dropdown notifications new"><a class="nav-link" href="" data-toggle="dropdown" aria-expanded="false"><i class="far fa-bell"></i><sup><span class="badge badge-secondary">8</span></sup></a>
-                <div class="dropdown-menu"><a class="dropdown-item active" href="#">Link</a><a class="dropdown-item" href="#">Link</a><a class="dropdown-item" href="#">Link</a></div>
-              </li>
-              <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="" data-toggle="dropdown" aria-expanded="false">
-                  <picture> </picture><i class="fas fa-user-circle"></i><span class="name d-none d-sm-block"> Eistein Dolores </span></a>
-                <div class="dropdown-menu" x-placement="bottom-start" style="position: absolute; transform: translate3d(0px, 37px, 0px); top: 0px; left: 0px; will-change: transform;"><a class="dropdown-item active" href="#">Link</a><a class="dropdown-item" href="#">Link</a><a class="dropdown-item" href="#">Link</a><a class="dropdown-item" href="#">Salir</a></div>
-              </li>
-              <li class="nav-item"><a class="sidebarSecondarytoggler btn btn-link nav-link" href="#"><i class="fas fa-cogs"></i></a></li>
-            </ul>
           </div>
+          <ul class="nav float-right">
+            <li class="nav-item dropdown notifications new"><a class="nav-link" href="" data-toggle="dropdown" aria-expanded="false"><i class="far fa-bell"></i><sup><span class="badge badge-secondary">8</span></sup></a>
+              <div class="dropdown-menu"><a class="dropdown-item active" href="#">Link</a><a class="dropdown-item" href="#">Link</a><a class="dropdown-item" href="#">Link</a></div>
+            </li>
+            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="" data-toggle="dropdown" aria-expanded="false">
+                <picture> <i class="fas fa-user-circle"></i></picture><span class="name d-none d-sm-block"> Eistein Dolores </span></a>
+              <div class="dropdown-menu" x-placement="bottom-start" style="position: absolute; transform: translate3d(0px, 37px, 0px); top: 0px; left: 0px; will-change: transform;"><a class="dropdown-item active" href="#">Link</a><a class="dropdown-item" href="#">Link</a><a class="dropdown-item" href="#">Link</a><a class="dropdown-item" href="#">Salir</a></div>
+            </li>
+            <li class="nav-item"><a class="sidebarSecondarytoggler btn btn-link nav-link" href="#"><i class="fas fa-cogs"></i></a></li>
+          </ul>
         </header>
         <section id="content">
           <nav class="main-nav simplebar" id="sidebar">
@@ -98,7 +98,8 @@
                               <div class="card mb-5 ">
                                 <div class="card-header">
                                   <h4 class="card-title">Card Desault</h4>
-                                  <div class="dropdown card-config"><a class="btn btn-light btn-sm" href="#"><em class="fa fa-list-ul"></em> Ver todo</a></div>
+                                  <div class="dropdown card-config"><a class="btn btn-light btn-sm" href="#"><i class="fas fa-list-ul"></i> Ver todo</a>
+                                  </div>
                                 </div>
                                 <div class="card-block card-body">
                                   <pre><code>&lt;div class=&quot;card&quot;&gt;&lt;/div&gt;</code></pre>
@@ -107,7 +108,8 @@
                               <div class="card mb-5 card-primary">
                                 <div class="card-header">
                                   <h4 class="card-title">Card Primary</h4>
-                                  <div class="dropdown card-config"><a class="btn btn-light btn-sm" href="#"><em class="fa fa-list-ul"></em> Ver todo</a></div>
+                                  <div class="dropdown card-config"><a class="btn btn-light btn-sm" href="#"><i class="fas fa-list-ul"></i> Ver todo</a>
+                                  </div>
                                 </div>
                                 <div class="card-block card-body">
                                   <pre><code>&lt;div class=&quot;card card-primary&quot;&gt;&lt;/div&gt;</code></pre>
@@ -116,7 +118,8 @@
                               <div class="card mb-5 card-secondary">
                                 <div class="card-header">
                                   <h4 class="card-title">Card Secondary</h4>
-                                  <div class="dropdown card-config"><a class="btn btn-light btn-sm" href="#"><em class="fa fa-list-ul"></em> Ver todo</a></div>
+                                  <div class="dropdown card-config"><a class="btn btn-light btn-sm" href="#"><i class="fas fa-list-ul"></i> Ver todo</a>
+                                  </div>
                                 </div>
                                 <div class="card-block card-body">
                                   <pre><code>&lt;div class=&quot;card card-secondary&quot;&gt;&lt;/div&gt;</code></pre>
@@ -127,7 +130,8 @@
                               <div class="card mb-5 card-success">
                                 <div class="card-header">
                                   <h4 class="card-title">Card Success</h4>
-                                  <div class="dropdown card-config"><a class="btn btn-light btn-sm" href="#"><em class="fa fa-list-ul"></em> Ver todo</a></div>
+                                  <div class="dropdown card-config"><a class="btn btn-light btn-sm" href="#"><i class="fas fa-list-ul"></i> Ver todo</a>
+                                  </div>
                                 </div>
                                 <div class="card-block card-body">
                                   <pre><code>&lt;div class=&quot;card card-success&quot;&gt;&lt;/div&gt;</code></pre>
@@ -136,7 +140,8 @@
                               <div class="card mb-5 card-info">
                                 <div class="card-header">
                                   <h4 class="card-title">Card Info</h4>
-                                  <div class="dropdown card-config"><a class="btn btn-light btn-sm" href="#"><em class="fa fa-list-ul"></em> Ver todo</a></div>
+                                  <div class="dropdown card-config"><a class="btn btn-light btn-sm" href="#"><i class="fas fa-list-ul"></i> Ver todo</a>
+                                  </div>
                                 </div>
                                 <div class="card-block card-body">
                                   <pre><code>&lt;div class=&quot;card card-info&quot;&gt;&lt;/div&gt;</code></pre>
@@ -145,7 +150,8 @@
                               <div class="card mb-5 card-warning">
                                 <div class="card-header">
                                   <h4 class="card-title">Card Warning</h4>
-                                  <div class="dropdown card-config"><a class="btn btn-light btn-sm" href="#"><em class="fa fa-list-ul"></em> Ver todo</a></div>
+                                  <div class="dropdown card-config"><a class="btn btn-light btn-sm" href="#"><i class="fas fa-list-ul"></i> Ver todo</a>
+                                  </div>
                                 </div>
                                 <div class="card-block card-body">
                                   <pre><code>&lt;div class=&quot;card card-warning&quot;&gt;&lt;/div&gt;</code></pre>
@@ -154,7 +160,8 @@
                               <div class="card mb-5 card-danger">
                                 <div class="card-header">
                                   <h4 class="card-title">Card Danger</h4>
-                                  <div class="dropdown card-config"><a class="btn btn-light btn-sm" href="#"><em class="fa fa-list-ul"></em> Ver todo</a></div>
+                                  <div class="dropdown card-config"><a class="btn btn-light btn-sm" href="#"><i class="fas fa-list-ul"></i> Ver todo</a>
+                                  </div>
                                 </div>
                                 <div class="card-block card-body">
                                   <pre><code>&lt;div class=&quot;card card-danger&quot;&gt;&lt;/div&gt;</code></pre>
