--- a/icons.html
+++ b/icons.html
@@ -83,7 +83,7 @@
                               <li><a class="nav-link" href="./tables-2.html" title="DataTables"><i class="far fa-circle"></i><span>DataTables</span></a></li>
                             </ul>
                           </li>
-                          <li class="nav-item"><a class="nav-link dropdown-toggle" href="#modals" title="Modales" data-toggle="collapse" aria-expanded="false" aria-controls="Modales"><i class="far fa-window-maximize"></i><span>Modales</span></a>
+                          <li class="nav-item"><a class="nav-link dropdown-toggle" href="#modals" title="Modales" data-toggle="collapse" aria-expanded="false" aria-controls="Modales"><i class="far fa-window-restore"></i><span>Modales</span></a>
                             <ul class="collapse list-unstyled" id="modals">
                               <li><a class="nav-link" href="./modals-1.html" title="Modales Regulares"><i class="far fa-circle"></i><span>Modales Regulares</span></a></li>
                               <li><a class="nav-link" href="./modals-2.html" title="Modales Verticales"><i class="far fa-circle"></i><span>Modales Verticales</span></a></li>
