--- a/simplebar.html
+++ b/simplebar.html
@@ -115,7 +115,7 @@
                                 </div>
                                 <div class="card-block card-body">
                                   <pre><code>&lt;div data-simplebar style=&quot;height:50rem&quot;&gt;</code></pre>
-                                  <div class="simplebar" data-simplebar="simplebar" scrollbarMinSize="" style="height:50rem;">
+                                  <div class="simplebar" data-simplebar="simplebar" scrollbarMinSize="" style="height:50rem">
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro tenetur qui veniam deserunt esse, sed, autem nostrum pariatur dignissimos ipsam cumque alias provident consectetur vel! Doloribus quos deserunt est rem.</p>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro tenetur qui veniam deserunt esse, sed, autem nostrum pariatur dignissimos ipsam cumque alias provident consectetur vel! Doloribus quos deserunt est rem.</p>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro tenetur qui veniam deserunt esse, sed, autem nostrum pariatur dignissimos ipsam cumque alias provident consectetur vel! Doloribus quos deserunt est rem.</p>
