Mejorado los cards y labels

--- a/cards.html
+++ b/cards.html
@@ -110,7 +110,7 @@
                               <div class="card mb-5 ">
                                 <div class="card-header">
                                   <h4 class="card-title">Card Desault</h4>
-                                  <div class="dropdown card-config"><a class="btn btn-light btn-sm" href="#"><i class="fas fa-list-ul"></i> Ver todo</a>
+                                  <div class="dropdown card-config"><a class="btn btn-link btn-sm" href="#"><i class="fas fa-list-ul"></i> Ver todo</a>
                                   </div>
                                 </div>
                                 <div class="card-block card-body">
@@ -120,7 +120,7 @@
                               <div class="card mb-5 card-primary">
                                 <div class="card-header">
                                   <h4 class="card-title">Card Primary</h4>
-                                  <div class="dropdown card-config"><a class="btn btn-light btn-sm" href="#"><i class="fas fa-list-ul"></i> Ver todo</a>
+                                  <div class="dropdown card-config"><a class="btn btn-link btn-sm" href="#"><i class="fas fa-list-ul"></i> Ver todo</a>
                                   </div>
                                 </div>
                                 <div class="card-block card-body">
@@ -130,7 +130,7 @@
                               <div class="card mb-5 card-secondary">
                                 <div class="card-header">
                                   <h4 class="card-title">Card Secondary</h4>
-                                  <div class="dropdown card-config"><a class="btn btn-light btn-sm" href="#"><i class="fas fa-list-ul"></i> Ver todo</a>
+                                  <div class="dropdown card-config"><a class="btn btn-link btn-sm" href="#"><i class="fas fa-list-ul"></i> Ver todo</a>
                                   </div>
                                 </div>
                                 <div class="card-block card-body">
@@ -142,7 +142,7 @@
                               <div class="card mb-5 card-success">
                                 <div class="card-header">
                                   <h4 class="card-title">Card Success</h4>
-                                  <div class="dropdown card-config"><a class="btn btn-light btn-sm" href="#"><i class="fas fa-list-ul"></i> Ver todo</a>
+                                  <div class="dropdown card-config"><a class="btn btn-link btn-sm" href="#"><i class="fas fa-list-ul"></i> Ver todo</a>
                                   </div>
                                 </div>
                                 <div class="card-block card-body">
@@ -152,7 +152,7 @@
                               <div class="card mb-5 card-info">
                                 <div class="card-header">
                                   <h4 class="card-title">Card Info</h4>
-                                  <div class="dropdown card-config"><a class="btn btn-light btn-sm" href="#"><i class="fas fa-list-ul"></i> Ver todo</a>
+                                  <div class="dropdown card-config"><a class="btn btn-link btn-sm" href="#"><i class="fas fa-list-ul"></i> Ver todo</a>
                                   </div>
                                 </div>
                                 <div class="card-block card-body">
@@ -162,7 +162,7 @@
                               <div class="card mb-5 card-warning">
                                 <div class="card-header">
                                   <h4 class="card-title">Card Warning</h4>
-                                  <div class="dropdown card-config"><a class="btn btn-light btn-sm" href="#"><i class="fas fa-list-ul"></i> Ver todo</a>
+                                  <div class="dropdown card-config"><a class="btn btn-link btn-sm" href="#"><i class="fas fa-list-ul"></i> Ver todo</a>
                                   </div>
                                 </div>
                                 <div class="card-block card-body">
@@ -172,7 +172,7 @@
                               <div class="card mb-5 card-danger">
                                 <div class="card-header">
                                   <h4 class="card-title">Card Danger</h4>
-                                  <div class="dropdown card-config"><a class="btn btn-light btn-sm" href="#"><i class="fas fa-list-ul"></i> Ver todo</a>
+                                  <div class="dropdown card-config"><a class="btn btn-link btn-sm" href="#"><i class="fas fa-list-ul"></i> Ver todo</a>
                                   </div>
                                 </div>
                                 <div class="card-block card-body">
