--- a/dashboard.html
+++ b/dashboard.html
@@ -110,7 +110,7 @@
                               <div class="card mb-5 pull-up">
                                 <div class="card-header">
                                   <h4 class="card-title">Directorio</h4>
-                                  <div class="dropdown card-config"><a class="btn btn-light btn-sm" href="#"><i class="fas fa-list-ul"></i> Ver todo</a>
+                                  <div class="dropdown card-config"><a class="btn btn-link btn-sm" href="#"><i class="fas fa-list-ul"></i> Ver todo</a>
                                   </div>
                                 </div>
                                 <div class="card-block card-body">
@@ -159,7 +159,7 @@
                               <div class="card mb-5 undefined">
                                 <div class="card-header">
                                   <h4 class="card-title">Bootbox</h4>
-                                  <div class="dropdown card-config"><a class="btn btn-light btn-sm" href="http://bootboxjs.com/getting-started.html"><i class="fas fa-list-ul"></i> Ver todo</a>
+                                  <div class="dropdown card-config"><a class="btn btn-link btn-sm" href="http://bootboxjs.com/getting-started.html"><i class="fas fa-list-ul"></i> Ver todo</a>
                                   </div>
                                 </div>
                                 <div class="card-block card-body">
@@ -171,7 +171,7 @@
                               <div class="card mb-5 undefined">
                                 <div class="card-header">
                                   <h4 class="card-title">jQuery Confirm</h4>
-                                  <div class="dropdown card-config"><a class="btn btn-light btn-sm" href="https://craftpip.github.io/jquery-confirm/"><i class="fas fa-list-ul"></i> Ver todo</a>
+                                  <div class="dropdown card-config"><a class="btn btn-link btn-sm" href="https://craftpip.github.io/jquery-confirm/"><i class="fas fa-list-ul"></i> Ver todo</a>
                                   </div>
                                 </div>
                                 <div class="card-block card-body">
