--- a/forms.html
+++ b/forms.html
@@ -135,7 +135,7 @@
                               <div class="card mb-5 card-success">
                                 <div class="card-header">
                                   <h4 class="card-title">Datepicker</h4>
-                                  <div class="dropdown card-config"><a class="btn btn-light btn-sm" href="https://flatpickr.js.org/examples/"><i class="fas fa-list-ul"></i> Ver todo</a>
+                                  <div class="dropdown card-config"><a class="btn btn-link btn-sm" href="https://flatpickr.js.org/examples/"><i class="fas fa-list-ul"></i> Ver todo</a>
                                   </div>
                                 </div>
                                 <div class="card-block card-body">
@@ -167,7 +167,7 @@
                               <div class="card mb-5 card-info">
                                 <div class="card-header">
                                   <h4 class="card-title">Formulario</h4>
-                                  <div class="dropdown card-config"><a class="btn btn-light btn-sm" data-toggle="collapse" role="button" aria-expanded="true" aria-controls="form" href="#form"><i class="fas fa-angle-up"></i></a>
+                                  <div class="dropdown card-config"><a class="btn btn-link btn-sm" data-toggle="collapse" role="button" aria-expanded="true" aria-controls="form" href="#form"><i class="fas fa-angle-up"></i></a>
                                   </div>
                                 </div>
                                 <div class="card-block card-body collapse show" id="form">
@@ -193,7 +193,7 @@
                               <div class="card mb-5 card-danger">
                                 <div class="card-header">
                                   <h4 class="card-title">Floating Labels</h4>
-                                  <div class="dropdown card-config"><a class="btn btn-light btn-sm" data-toggle="collapse" role="button" aria-expanded="true" aria-controls="floating" href="#floating"><i class="fas fa-angle-up"></i></a>
+                                  <div class="dropdown card-config"><a class="btn btn-link btn-sm" data-toggle="collapse" role="button" aria-expanded="true" aria-controls="floating" href="#floating"><i class="fas fa-angle-up"></i></a>
                                   </div>
                                 </div>
                                 <div class="card-block card-body collapse show" id="floating">
