--- a/icons.html
+++ b/icons.html
@@ -115,7 +115,7 @@
                               <div class="card mb-5 https://fontawesome.com/icons">
                                 <div class="card-header">
                                   <h4 class="card-title">FontAwesome</h4>
-                                  <div class="dropdown card-config"><a class="btn btn-light btn-sm" href="Versión 5"><i class="fas fa-list-ul"></i> Ver todo</a>
+                                  <div class="dropdown card-config"><a class="btn btn-link btn-sm" href="Versión 5"><i class="fas fa-list-ul"></i> Ver todo</a>
                                   </div>
                                 </div>
                                 <div class="card-block card-body">
