--- a/simplebar.html
+++ b/simplebar.html
@@ -110,7 +110,7 @@
                               <div class="card mb-5 undefined">
                                 <div class="card-header">
                                   <h4 class="card-title">Uso de SimpleBar</h4>
-                                  <div class="dropdown card-config"><a class="btn btn-light btn-sm" href="https://github.com/Grsmto/simplebar"><i class="fas fa-list-ul"></i> Ver todo</a>
+                                  <div class="dropdown card-config"><a class="btn btn-link btn-sm" href="https://github.com/Grsmto/simplebar"><i class="fas fa-list-ul"></i> Ver todo</a>
                                   </div>
                                 </div>
                                 <div class="card-block card-body">
