--- a/tables-2.html
+++ b/tables-2.html
@@ -180,7 +180,7 @@ $(&quot;table&quot;).DataTable();</code></pre>
                               <div class="card mb-5 https://fontawesome.com/icons">
                                 <div class="card-header">
                                   <h4 class="card-title">FontAwesome</h4>
-                                  <div class="dropdown card-config"><a class="btn btn-light btn-sm" href="Usando Ajax"><i class="fas fa-list-ul"></i> Ver todo</a>
+                                  <div class="dropdown card-config"><a class="btn btn-link btn-sm" href="Usando Ajax"><i class="fas fa-list-ul"></i> Ver todo</a>
                                   </div>
                                 </div>
                                 <div class="card-block card-body">
