--- a/modals-1.html
+++ b/modals-1.html
@@ -142,7 +142,7 @@ Launch demo modal
                                   <!-- Button trigger modal-->
                                   <button class="btn btn-primary" type="button" data-toggle="modal" data-target="#exampleModal">Launch demo modal</button>
                                   <!-- Modal-->
-                                  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                  <div class="modal modal-danger fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                     <div class="modal-dialog" role="document">
                                       <div class="modal-content modal-lg">
                                         <div class="modal-header">
